@@ -11,22 +11,58 @@
   to widen message area.
 * when connctions from mobile phones, swith html contents. how to?
 
+<<<<<<< HEAD
 ## 0.34.1-SNAPSHOT
 
 - log version etc.
 
 ## 0.31.0 (2025-09-02)
+=======
+## 0.34.0 (2025-10-31)
+>>>>>>> refs/remotes/origin/main
 
-* bump-version-local.sh - moved generic rules to `~/bin/bump-version.sh`
-* stopped warning. is this correct?
+- after removing `.shadow-cljs` then the error on `just watch` disappeared.
+- updated libraries
 
-```
-  :jvm-opts ["--enable-native-access=ALL-UNNAMED"
-             "--sun-misc-unsafe-memory-access=allow"]
-```
+| :file    | :name                         | :current | :latest  |
+|----------|-------------------------------|----------|----------|
+| deps.edn | io.github.clojure/tools.build | v0.10.10 | v0.10.11 |
+|          | metosin/reitit                | 0.9.1    | 0.9.2    |
+|          | nrepl/nrepl                   | 1.5.0    | 1.5.1    |
 
+## 0.33.0-SNAPSHOT
+
+- updated libraries
+
+| :file    | :name                                        | :current | :latest |
+|----------|----------------------------------------------|----------|---------|
+| deps.edn | io.github.hkimjp/datascript-storage-javatime | 0.7.4    | 0.7.6   |
+|          | nrepl/nrepl                                  | 1.4.0    | 1.5.0   |
+
+## 0.32.0 (2025-10-04)
+
+- added `/resources/schema.md`
+- correct url handling. url must not end with `/`
+- fixed a bug `just watch` miss loaded the `user` namespace
+- clojure -J--enable-native-access=ALL-UNNAMED -M:cljs watch client
+- added `dev` recipe to `Justfile`
+- updated libraries
+
+| :file    | :name                                        | :current | :latest |
+|----------|----------------------------------------------|----------|---------|
+| deps.edn | io.github.hkimjp/datascript-storage-javatime | 0.7.2    | 0.7.4   |
+|          | nrepl/nrepl                                  | 1.3.1    | 1.4.0   |
+|          | org.clojure/clojure                          | 1.12.2   | 1.12.3  |
+|          | ring/ring-core                               | 1.14.2   | 1.15.3  |
+|          | ring/ring-defaults                           | 0.6.0    | 0.7.0   |
+|          | ring/ring-jetty-adapter                      | 1.14.2   | 1.15.3  |
+|          | thheller/shadow-cljs                         | 3.2.0    | 3.2.1   |
+
+## 0.31.0
+
+* io.github.hkimjp/datascript-storage-javatime {:git/tag "0.7.1" :git/sha "bdd351c"}
 * why different git/sha - `git show-ref --tags` and `clj -Tantq outdated`
-  hkimjp/datascript-storage-javatime.
+  hkimjp/datascript-storage-javatime. => OK. understood.
 * call l22:/api/users/2025/python-b/tue2
 * updated libraries
 
@@ -38,8 +74,10 @@
 |          | org.clojure/clojure           | 1.12.1   | 1.12.2   |
 |          | thheller/shadow-cljs          | 3.1.7    | 3.2.0    |
 
-* io.github.hkimjp/datascript-storage-javatime {:git/tag "0.7.1" :git/sha "bdd351c"}
 * envvar AYEAR, SUBJ, UHOUR, updated `systemd/start.sh`
+
+## 0.30.0-SNAPSHOT (2025-06-01)
+
 * **BUG** can not restore 'storage/db.sqlite'. now on-memory mode only.
   this bug strongly related to reading tagged-literals issue.
 
